@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 0.93
 
+- Fixed bug in parsing the databytes column in mail rules.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
